--- a/01-2columnas_iguales_css_grid/css/styles.css
+++ b/01-2columnas_iguales_css_grid/css/styles.css
@@ -44,6 +44,7 @@ h1 {
     .dos-columnas {
         display: grid;
         grid-template-columns: repeat(2, 50%);
+        grid-template-columns: repeat(2, 1fr);
         column-gap: 2rem;
     }
 }
